# META-DATA_DRIVEN_RAG_AGENT_SYSTEM

./: .gitignore  README.md
insurance-rag-agent/: .gitattributes  .gitignore  LINKEDIN_POST.md  PROJECT_DESCRIPTION.md  QUERY_EXAMPLES_README.md  README.md  print_chunks_and_tables.py  pyproject.toml  ragas_eval_metadata.jsonl  ragas_eval_qa.jsonl  ragas_qa.jsonl  rebuild_tables.py  requirements.txt  run_table_qa_eval.py  table_qa_evaluation_20250908_001810.json  table_qa_evaluation_20250908_004702.json  table_qa_evaluation_20250908_121050.json  view_qa_queries.py
insurance-rag-agent/output/: extracted_chunks_20250907_200015.txt  extracted_tables_20250907_200015.txt
insurance-rag-agent/output/eval_results/: run_table_qa_eval.txt
insurance-rag-agent/output/print_chunks_and_table._terminal_output/: print_chunks_and_table._outputs.txt
insurance-rag-agent/output/tools_output/: needle_tool_output.txt  statistics_tool_output.txt  summary_tool_output.txt  table_qa_agent_tool_output.txt
insurance-rag-agent/src/: __init__.py  agent.py  agent_tools.py  config.py  eval_ragas.py  index_build.py  ingest.py  main.py  needle_tool.py  retrieval.py  statistics_tool.py  summary_tool.py  table_qa_tool.py  utils.py
insurance-rag-agent/storage/: index_store.json
insurance-rag-agent/storage/tables/: Table-Alex_Jones_Accident_Report-7-1.csv  Table-Alex_Jones_Insurance_Policy-2-1.csv  Table-Alex_Jones_Payment_Report-2-1.csv  Table-Maria_Petrov_Payment_Report-1-1.csv  Table-Petr_Petrov_Insurance_Policy_Honda-2-1.csv  (+3 more)
insurance-rag-agent/tests/: __init__.py  test_ingest_integration.py
